# recursion-schemes

./: default.nix  hie.yaml  recursion.cabal  repl.nix  shell.nix  stack.yaml
app/: Main.hs
nix/: sources.json
src/: Example.hs  ListF.hs
src/Comonad/: Cofree.hs  Env.hs  README.md  Store.hs  Stream.hs  Traced.hs  Tree.hs  Zipper.hs
src/Comonad/Cofree/: Examples.hs  Newton.hs  Trans.hs
src/Comonad/Env/: Account.hs  Formatter.hs
src/Comonad/Fix/: WFix.hs
src/Comonad/Store/: Convolution.hs  Conway.hs  Dependencies.hs
src/Comonad/Traced/: Builder.hs  Dependencies.hs  Derivative.hs
src/Comonad/Transformers/: Report.hs  ReportAdvanced.hs
src/Comonad/Zipper/: WaterLevel.hs
