cabal-version:       2.4

name:                recursion
version:             0.1.0.0
build-type:          Simple

common common-options
    build-depends:    base ^>= 4.14.0.0
    default-language: Haskell2010

Executable recursion
  import:                common-options
  main-is:               Main.hs
  hs-source-dirs:        app
  ghc-options:           -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:         recursion

Library
  import:             common-options
  hs-source-dirs:     src
  exposed-modules:    Example,
                      ListF
  other-modules:
  build-depends:      recursion-schemes ^>= 5.2,
                      containers ^>= 0.6,
                      mtl ^>= 2.2,
